--- a/task-03.html
+++ b/task-03.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 3</title>
     <link rel="stylesheet" href="css/common.css" />
+    <style>
+      .gallery {
+        list-style: none;
+      }
+
+      .list {
+        display: flex ;
+        flex-direction: column;
+      }
+
+    </style>
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
